added base files

--- a/massachusetts/index.html
+++ b/massachusetts/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Massachusetts</title>
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="syles/style.css">
 </head>
 <body>
     <header>
@@ -23,7 +23,7 @@
     </nav>
     <main>
         <section class="intro">
-            <img src="/images/salem.jpg" alt="salem massachustetts">
+            <img src="images/salem.jpg" alt="salem massachustetts">
             <h2>Overview</h2>
             <p>Ideally, I think this trip could last four days, maybe five. We would start by slying in to Boston, staying there, and seeing historical sights. We would then move to Salem to see some witchy things, and then i want to go to Vermont to see all the leaves towards the end.</p>
 
