--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <title>Potential Trips</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <header>
         <h1>Ochs Family Trips</h1>
     </header>
+    <img id="places" src="images/places.jpg" alt="oh the places youll go">
     <!-- <nav>
         <ul class="navigation">
             <li><a href="">Boston/Salem</a></li>
