--- a/index.html
+++ b/index.html
@@ -21,12 +21,17 @@
         </ul>
     </nav> -->
     <main>
-        <ul>
-            <li><a href="massachusetts/index.html">Boston/Salem</a></li>
-            <li><a href="">Carolinas</a></li>
-            <li><a href="">Disney World</a></li>
-            <li><a href="">Italy</a></li>
-        </ul>
+        <section class="index">
+            <h2>Trip Index</h2>
+            <ul>
+                <li><a href="massachusetts/index.html">Boston/Salem</a></li>
+                <li><a href="">Carolinas</a></li>
+                <li><a href="">Disney World</a></li>
+                <li><a href="">Italy</a></li>
+            </ul>
+
+        </section>
+       
     </main>
     <footer>
         <p>.:|:. Trips By Jess .:|:.</p>
